Fix to stop tools overlapping in sidebar

--- a/static-files/include/style/main.css
+++ b/static-files/include/style/main.css
@@ -623,7 +623,7 @@ footer .licence {
 
 .backpack li {
 	position: relative;
-	margin-bottom: 2em;
+	margin-bottom: 6em;
 	margin-top: 15px;
 	}
 
